@@ -3,6 +3,11 @@
  0.9.2
 =======
 
+THREAD support [NEW]
+--------------------
+The IMAP THREAD command is now supported. Thanks to Lukasz Mierzwa for
+the patches.
+
 Enhanced capability querying [NEW]
 ----------------------------------
 Previously only the pre-authentication server capabilities were
